# research-assistant

backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/routes/: chat_router.py
backend/src/services/: llm_model.py  tool_agent.py  vector_store.py
frontend/src/: App.tsx  types.ts
frontend/src/components/: ChatWindow.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/hooks/mutations/: useChat.ts  usePaperAI.ts  useUploadFile.ts
frontend/src/pages/: Chat.tsx  SearchPaper.tsx
