[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.0",
    "fastapi[standard]>=0.120.4",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-huggingface>=1.0.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "uvicorn[standard]>=0.38.0",
]
